--- a/static/normal.html
+++ b/static/normal.html
@@ -3,6 +3,9 @@
 <head>
     <title>普通用户操作</title>
     <style>
+        * {
+            transition: .2s;
+        }
         body {
             font-family: Arial, sans-serif;
             display: flex;
