--- a/static/shortestPath.html
+++ b/static/shortestPath.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Shortest Path Result</title>
     <style>
+        * {
+            transition: .2s;
+        }
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -31,8 +34,10 @@
 </head>
 <body>
 <h1>查询成功！</h1>
-<p>从 <span style="color: #007bff;">{{ .sourceID }}</span> 到 <span style="color: #007bff;">{{ .targetID }}</span> 的最短路径是:</p>
-<p class="path">{{ range $index, $node := .path }}{{ if $index }} <span style="color: #007bff;">-></span> {{ end }}<span style="color: #007bff;">{{ $node }}</span>{{ end }}</p>
+<p>从 <span style="color: #007bff;">{{ .sourceID }}</span> 到 <span style="color: #007bff;">{{ .targetID }}</span>
+    的最短路径是:</p>
+<p class="path">{{ range $index, $node := .path }}{{ if $index }} <span style="color: #007bff;">-></span> {{ end }}<span
+        style="color: #007bff;">{{ $node }}</span>{{ end }}</p>
 <p>最短路径权重为: <span style="color: #007bff;">{{ .weight }}</span></p>
 </body>
 </html>
