--- a/static/startAdmin.html
+++ b/static/startAdmin.html
@@ -3,6 +3,9 @@
 <head>
     <title>管理员操作</title>
     <style>
+        * {
+            transition: .2s;
+        }
         body {
             display: flex;
             justify-content: center;
