--- a/static/dijkstra.html
+++ b/static/dijkstra.html
@@ -49,12 +49,12 @@
 <body>
 <h1>查找最短路径</h1>
 <form action="/shortestPath" method="POST">
-    <label for="sourceID">Source ID:</label>
+    <label for="sourceID">起点:</label>
     <input type="text" id="sourceID" name="sourceID"><br><br>
-    <label for="targetID">Target ID:</label>
+    <label for="targetID">终点:</label>
     <input type="text" id="targetID" name="targetID"><br><br>
     <input type="hidden" name="_method" value="POST">
-    <input type="submit" value="Find Shortest Path">
+    <input type="submit" value="查找最短路径">
 </form>
 </body>
 </html>
