--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Campus Guide</title>
     <style>
+        * {
+            transition: .2s;
+        }
         body {
             display: flex;
             justify-content: center;
@@ -41,6 +44,10 @@
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+
+        img:hover {
+            box-shadow: .1em .2em 1em rgba(0,0,0,.2);
+        }
     </style>
 </head>
 <body>
@@ -56,6 +63,8 @@
         <input type="hidden" name="type" value="normal">
         <input type="submit" value="Normal">
     </form>
+    <img src="/images/5F33657182CDF26CCDD1A772BE318A34.jpg" alt=""
+         style="width: 20vw; margin: 1em; border-radius: .5em;">
 </div>
 </body>
 </html>
