--- a/static/bfs.html
+++ b/static/bfs.html
@@ -6,6 +6,7 @@
         * {
             transition: .2s;
         }
+
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -57,7 +58,7 @@
     <label for="targetID">终点:</label>
     <input type="text" id="targetID" name="targetID"><br><br>
     <input type="hidden" name="_method" value="POST">
-    <input type="submit" value="Find Shortest Path">
+    <input type="submit" value="查找">
 </form>
 </body>
 </html>
