--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
         * {
             transition: .2s;
         }
+
         body {
             display: flex;
             justify-content: center;
@@ -46,7 +47,7 @@
         }
 
         img:hover {
-            box-shadow: .1em .2em 1em rgba(0,0,0,.2);
+            box-shadow: .1em .2em 1em rgba(0, 0, 0, .2);
         }
     </style>
 </head>
@@ -63,7 +64,7 @@
         <input type="hidden" name="type" value="normal">
         <input type="submit" value="Normal">
     </form>
-    <img src="/images/5F33657182CDF26CCDD1A772BE318A34.jpg" alt=""
+    <img src="/images/ShawnAvatar.jpg" alt=""
          style="width: 20vw; margin: 1em; border-radius: .5em;">
 </div>
 </body>
