--- a/static/updateMap.html
+++ b/static/updateMap.html
@@ -58,7 +58,7 @@
         <input type="text" id="nodeID" name="nodeID"><br><br>
         <label for="newName">名称</label>
         <input type="text" id="newName" name="newName"><br><br>
-        <input type="submit" value="Update Map">
+        <input type="submit" value="更新">
     </form>
 </div>
 </body>
