--- a/static/addRoad.html
+++ b/static/addRoad.html
@@ -52,15 +52,15 @@
 </head>
 <body>
 <div class="container">
-    <h1>更新道路</h1>
-    <form action="/updateRoad" method="POST">
+    <h1>添加道路</h1>
+    <form action="/addRoad" method="POST">
         <label for="startVex">起点</label>
         <input type="text" id="startVex" name="startVex"><br><br>
         <label for="endVex">终点</label>
         <input type="text" id="endVex" name="endVex"><br><br>
         <label for="newWeight">权重</label>
         <input type="text" id="newWeight" name="newWeight"><br><br>
-        <input type="submit" value="更新">
+        <input type="submit" value="添加">
     </form>
 </div>
 </body>
