--- a/static/login.html
+++ b/static/login.html
@@ -61,7 +61,7 @@
         <label for="password">密码:</label>
         <input type="password" id="password" name="password" required><br><br>
 
-        <input type="submit" value="Login">
+        <input type="submit" value="登录">
     </form>
 </div>
 </body>
